--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,3 +1,12 @@
+.container {
+  width: 100%;
+  height: 80px;
+  background-color: rgb(19, 19, 19);
+  padding-bottom: 2rem;
+  align-items: center;
+  position: fixed;
+  top: 0;
+}
 .navbar {
   width: 100%;
   height: 80px;
@@ -5,8 +14,14 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  position: fixed;
-  top: 0;
+}
+.secondNavbar {
+  width: 100%;
+  height: 90px;
+  background-color: rgb(129, 29, 29);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .links {
