--- a/src/pages/shop/shop.css
+++ b/src/pages/shop/shop.css
@@ -4,6 +4,7 @@
     text-align: center;
     font-size: 20px;
     padding-bottom: 4rem;
+    padding-top: 4rem;
   }
 
   .products {
@@ -115,6 +116,7 @@
     margin-top: 100px;
     text-align: center;
     font-size: 20px;
+    padding-top: 4rem;
   }
   .products {
     width: 100%;
